--- a/python_demo/mnist_book.ipynb
+++ b/python_demo/mnist_book.ipynb
@@ -2,20 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ERROR in cling::CIFactory::createCI(): cannot extract standard library include paths!\n",
-      "Invoking:\n",
-      "  LC_ALL=C /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/c++    -xc++ -E -v /dev/null 2>&1 | sed -n -e '/^.*include/,${' -e '/^ \\/.*++/p' -e '}'\n",
-      "Results was:\n",
-      "With exit code 0\n",
-      "Warning: sysroot \"/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk\" not found (ignoring for now).2023-04-01 10:54:34.410399: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+      "(Re-)building pre-compiled headers (options: -O2); this may take a minute ...\n"
      ]
     }
    ],
@@ -67,15 +61,15 @@
    ],
    "source": [
     "(raw_train_X, raw_train_y), (raw_test_X, raw_test_y) = mnist.load_data()\n",
-    "train_X = std.vector[std.vector[float]]()\n",
-    "train_y = std.vector[std.vector[float]]()\n",
-    "test_X = std.vector[std.vector[float]]()\n",
-    "test_y = std.vector[std.vector[float]]()\n",
+    "train_X = std.vector[std.vector[cpp.Value[float]]]()\n",
+    "train_y = std.vector[std.vector[cpp.Value[float]]]()\n",
+    "test_X = std.vector[std.vector[cpp.Value[float]]]()\n",
+    "test_y = std.vector[std.vector[cpp.Value[float]]]()\n",
     "\n",
-    "[train_X.push_back(std.vector[float](list(x.flatten()/255 - 0.5))) for x in raw_train_X];\n",
-    "[train_y.push_back(std.vector[float](list(np.eye(10)[y]))) for y in raw_train_y];\n",
-    "[test_X.push_back(std.vector[float](list(x.flatten()/255 - 0.5))) for x in raw_test_X];\n",
-    "[test_y.push_back(std.vector[float](list(np.eye(10)[y]))) for y in raw_test_y];"
+    "[train_X.push_back(std.vector[cpp.Value[float]](list(x.flatten()/255 - 0.5))) for x in raw_train_X];\n",
+    "[train_y.push_back(std.vector[cpp.Value[float]](list(np.eye(10)[y]))) for y in raw_train_y];\n",
+    "[test_X.push_back(std.vector[cpp.Value[float]](list(x.flatten()/255 - 0.5))) for x in raw_test_X];\n",
+    "[test_y.push_back(std.vector[cpp.Value[float]](list(np.eye(10)[y]))) for y in raw_test_y];"
    ]
   },
   {
@@ -258,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.11.2"
   },
   "vscode": {
    "interpreter": {
